# parallelism

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: load.cpp  load.hpp  main.cpp  png.hpp  process.cpp  process.hpp  threads.cpp  threads.hpp
